--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "files.associations": {
         "random": "cpp"
     },
-    "python.pythonPath": "/usr/bin/python3.6"
+    "python.pythonPath": "/usr/bin/python3",
+    "python.linting.enabled": true
 }
